# MultiThreadServer

./: .gitignore  BugReport.md  CLAUDE.md  CMakeLists.txt  README.md  advice.md  main_jsonclient.cpp  main_server.cpp
.github/workflows/: ci.yml
cmake/: mts-config.cmake.in
examples/: CMakeLists.txt
examples/echo_server/: handlers.cpp  handlers.h  main.cpp  messages.h
examples/load_client/: main.cpp
include/: AsioThreadPool.h  CServer.h  CSession.h  LogicSystem.h  MsgNode.h  Singleton.h  const.h
include/mts/: dispatcher.h  frame.h  msg_node.h  mts.h  server.h  server_config.h  session.h  thread_pool.h
src/: AsioThreadPool.cpp  CServer.cpp  CSession.cpp  LogicSystem.cpp  MsgNode.cpp  dispatcher.cpp  frame.cpp  msg_node.cpp  server.cpp  session.cpp  thread_pool.cpp
tests/consumer/: CMakeLists.txt  main.cpp
